--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
-										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
+									<a href="#" data-toggle="modal" data-target="#drosophila" class="w3ls-hover" data-title="Drosophila">
+										<img a href="#" src="images/drosophila.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>Drosophila</h5>
 										</div>
@@ -417,7 +417,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- //modal-contact -->
 
-	<!-- modal-about -->
+	<!-- modal-emotion -->
 	<div class="modal fade modal-about" id="emotion" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
@@ -470,7 +470,84 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 	</div>
-	<!-- //modal-about -->
+	<!-- //modal-emotion -->
+
+	<!-- modal-droso -->
+	<div class="modal fade modal-about" id="drosophila" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				</div>
+				<div class="modal-body modal-spa">
+					<div class="project">
+						<div class="project-img ">
+							<img src="images/drosophila.jpg" class="img-responsive" alt=""/>
+						</div>
+						<div class="col-md-8 project-right wthree project-heading">
+							<h3>Drosophila</span></h3>
+						</div>
+						<div class="project-text agileits-w3layouts">
+							<br>
+							<p>
+							<h5>Introduction</h5>
+							Named after the countless genetic studies done on the species, the Drosophila project uses genetic
+							algorithms to produce unique light patterns on a "badge" display that can be "recombined" with other
+							nearby badges.
+							</p>
+							<p>
+							<h5>The Genetic Material</h5>
+							The genome in this project operates on traits which are discrete from one another, but which operate
+							under unique rules. The traits modeled in this genome are light color, flash pattern, genetic greediness,
+							and
+							When badges swap material over NFC, they algorithmically recombine, and each badge becomes an offspring
+							of the two parent badges.
+							Interestingly, when offspring badges repeatedly recombine with only each other, the traits of
+							the badges quickly converge to form not-very-interesting and highly-likely patterns, and their
+							genetic variation approaches 0. We've never been able to totally remove all genetic variation, but we
+							have observed totally stagnant phenotypic variation.
+							</p>
+							<p>
+							<h5>Flash Pattern</h5>
+							There are five unique flash patterns modeled in this version of the badge, which operate under straightfoward
+							dominance/recessive trait characteristics. The patterns are:
+							<ul>
+							<li>all on</li>
+							<li>clockwise rotation</li>
+							<li>counterclockwise rotation</li>
+							<li>every other LED flashes</li>
+							<li>every LED flashes</li>  
+							</ul>
+							<h5>Color</h5>
+							Colors per genome are described using one RGB value and a function vs. time
+							per LED of variance from one RGB value. When badges recombine, their starting RGB values
+							average and <b>one</b> function is randomly selected for all offspring. Note that this means
+							that if badge A has color pattern f(x), it could recombine with badge B and both A and B would
+							end with color pattern f(x) -- overwriting B's function -- and recombine with f(c) and end with
+							both A and C with color pattern g(x). No function is automatically dominant over any other.
+							<h5>Greediness</h5>
+							"Greediness" is defined in this project as a genotypes affinity to "protect itself," or its' likelihood
+							to pass its' own traits onto offspring. Genotypes with high greediness are more likely to produce offspring
+							with at least one trait <b>exactly</b> like the parent. The implementation of this is straightforward, as
+							parameter G in each algorithm is evaluated prior to genetic exchange for each trait, and if exceeds a threshold
+							within a percentage for each trait, the recombination does not occur and only that parents genotype is in the
+							pool of offspring.
+							In recombination, greediness averages with its co-parent for each offspring.
+							For example, if badge A has G=0.1 and badge B has G=0.6, prior to each trait recombination will come this evaluation:
+							r = randint(1, 100) // get a threshold to exceed<br>
+							m = randint(1, 100) // get a multiplier<br>
+							aExceeds = m(A.G) > r<br>
+							bExceeds = m(B.G) > r<br>
+							if both numbers exceed the threshold, they recombine as normal.
+							</p>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //modal-droso -->
 
 	
 	<!-- Bootstrap core JavaScript
