update skills and education

--- a/index.html
+++ b/index.html
@@ -125,61 +125,87 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 				</div>
 				<div class="modal-body modal-spa">
-					<div class="skills"> 
-						<div class="col-md-6 bar-grids">
+					<div class="skills list">
+						<ul class="col-md-6 bar-grids">
 							<h4><span class="glyphicon glyphicon-cog"></span> Technical Skills </h4>
-							<h6>The Thing  <span> The Confidence </span></h6>
+                            <ul><h6>Languages</h6>
+							<li>Javascript,</li>
+							<li>Python,</li>
+							<li>C/C++,</li>
+							<li>Java,</li>
+							<li>CSS,</li>
+							<li>HTTP,</li>
+							<li>LISP</li>
+							</ul>
                             <br>
-                            <h6><b>Languages</b></h6>
-							<h6>Javascript<span>90% </span></h6>
-							<h6>Python<span>70% </span></h6>
-							<h6>C/C++<span>60% </span></h6>
-							<h6>LISP<span>45% </span></h6>
-							<h6>Golang<span>30% </span></h6>
-                            <br>
-                            <h6><b>Frameworks</b></h6>
-                            <h6>NodeJS<span>85% </span></h6>
-                            <h6>React<span>60% </span></h6>
-							<h6>hadoop/mapreduce<span>20% </span></h6>
-                            <br>
-                            <h6><b>Workflow</b></h6>
-                            <h6>Git<span>90% </span></h6>
-                            <h6>Unix/Linux<span>90% </span></h6>
-                            <h6>Jenkins<span>65% </span></h6>
-                            <h6>SVN<span>40% </span></h6>
+                            <ul><b><h6>Frameworks</h6></b>
+                            <li>NodeJS,</li>
+                            <li>React,</li>
+                            <li>Git,</li>
+                            <li>Unix/Linux,</li>
+                            <li>Jenkins,</li>
+                            <li>TDD & CI Releases,</li>
+                            <li>SVN,</li>
+                            <li>Gradle,</li>
+                            <li>Phabricator/Arcanist,</li>
+                            <li>MongoDB,</li>
+                            <li>Electron,</li>
+							<li>Mapreduce</li>
+							</ul>
 							<br>
-							<h6><b>Theories*</b></h6>
-							<h6>Computational Neural Networks (MLPs)<span>90% </span></h6>
-							<h6>Cognitive Emotional Theory<span>65% </span></h6>
+							<ul><b><h6>Relevant Coursework</h6></b>
+								<li>Advanced Topics in Machine Learning,</li>
+								<li>Computational Models of Cognitive Science,</li>
+								<li>Stochastic Systems,</li>
+								<li>Linear Algebra,</li>
+								<li>Advanced Topics in Artificial Intelligence,</li>
+								<li>Advanced Seminar in Cognitive Science (MIT)</li>
+								<li>Neural Networks for Machine Learning (Stanford, Online)</li>
+							</ul>
+							<br>
 						</div>
-						<div class="col-md-6 bar-grids  w3-agile">
-							<h4><span class="glyphicon glyphicon-briefcase"></span> Professional Skills </h4>
-							<h6><b>Communication</b><span> 85% </span></h6>
-                            <p>Team communicator across and to upper management (Jibo)</p>
-                            <p>Created and advocated for formal Lunch and Learn implementation. (Jibo)</p>
-                            <p>Participate in Product and Business Management Book Group</p>
-                            <br>
-                            <h6><b>Leadership</b><span>90% </span></h6>
-                            <p>Won First Bi-Annual Company Culture Award (Jibo)</p>
-                            <br>
-							<h6><b>Public Speaking and Appearances</b><span> 95% </span></h6>
-							<p>Many (20+) public presentations, lectures, and workshops on Jibo SDK and social robotics.</p>
-                            <p>Appear in many developer Promo Videos and Interviews (Jibo)</p>
-                            <p>Write for Developer Blog (Jibo)</p>
-                            <br>
-							<h6><b>Community Service</b><span>86% </span></h6>
-                            <p>Present instructor for Girls Who Code</p>
-                            <p>Ran the Women in Computer Science chapter (Tufts University)</p>
-                            <p>Girl Scouts of America Gold Award (it's an Eagle Scout, for girls)</p>
+						<div class="col-md-6 bar-grids  w3-agile skills list">
+							<h4><span class="glyphicon glyphicon-briefcase"></span> Leadership & Community Service</h4>
+							<ul><b><h6>Cambridge Inventors Club</h6></b>
+								<li>Work with children age 8-13 on engineering fundamentals, such as iterative design,retrospectives, and cooperation.</li>
+							</ul>
+							<br>
+							<ul><b><h6>Girls Who Code</h6></b>
+								<li>Instructed three levels of middle- and high-school aged students from introduction to basic data strcutures. Supplemented given
+									course materials with additional lesson plans to emphasize CS fundamentals.</li>
+							</ul>
+							<br>
+							<ul><b><h6>Boston Ultimate Disc Alliance</h6></b>
+								<li>First coach on new high school girls team, focused on empowering women in the Boston ultimate community.</li>
+							</ul>
+							<br>
+							<ul><b><h6>Girl Scout Gold Award</h6></b>
+								<li>Highest honor of Girl Scouts of America.</li>
+							</ul>
+							<br>
+							<br>
 						</div>
-                        <div class="col-md-12 bar-grids  w3-agile">
-                            <h4>Testimonies</h4>
+						<div class="col-md-12 bar-grids  w3-agile skills">
+							<h4><span class="glyphicon glyphicon-comment"></span>Public Speaking</h4>
+							<ul><b><h6>Appearances</h6></b>
+								<li>SXSW, Robot Petting Zoo</li>
+								<li>Women Engineers Who Code, (technical workshop & imposter syndrome seminar)</li>
+								<li>Lesbians Who Tech, presentation on emotional future ofrobotics</li>
+								<li>Boston ML Meetup, presenter on Innovations in Human-ComputerInterfaces</li>
+								<li>MLHack Championships, (technical presentation & hackathon judge)</li>
+								<li>Tufts WICS Conference, Alumni Panne</li>
+							</ul>
+							<br>
+						</div>
+						<br>
+						<div class="col-md-12 bar-grids  w3-agile skills">
+							<h4><span class="glyphicon glyphicon-thumbs-up"></span>Testimonies</h4>
                             <p>"Nobody else I would rather work with on your team. Or any team, ever." <br><b>Michael James, Friend and Student Peer</b></p>
                             <p>"You have this keen ability to see so far beyond the scope of the current problem, and still so clearly address the current problem." <br><b>Carla Brodley, Dean of Computer Science, Northeastern University</b></p>
                             <p>"There is no doubt in my mind you are destined for great things." <br><b>Steve Chambers, CEO, Jibo</b></p>
                             <p>"Once you see this pull request you will learn why hurricanes are named after people" <br><b>Me</b></p>
-                        </div>
-						<div class="clearfix"> </div>	
+						</div>
+						<div class="clearfix"> </div>
 					</div>
 				</div> 
 			</div>
@@ -195,14 +221,38 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="experience w3-agileits-info">
+						<div class="experience-grids">
+							<div class="experience-left">
+								<h3>August 2017 - Present</h3>
+								<h5>Cogito</h5>
+							</div>
+							<div class="experience-right">
+								<h4>Senior Software Developer</h4>
+								<p>Originally Implemented and manage release pipeline. Full-stack development of Role-Based User Management (RBUM) APIs.</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="experience-grids">
+							<div class="experience-left">
+								<h3>August 2017 - Present</h3>
+								<h5>Jibo Inc.</h5>
+							</div>
+							<div class="experience-right">
+								<h4>Software Consultant</h4>
+								<p>Continuing work to rearchitect APIs in cloud-based architecture.</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
                         <div class="experience-grids">
                             <div class="experience-left">
-                                <h3>2017 - Now</h3>
+                                <h3>Jan 2017 - August 2017</h3>
                                 <h5>Jibo Inc.</h5>
                             </div>
                             <div class="experience-right">
                                 <h4>Character AI Developer</h4>
-                                <p>Built Jibo's Emotional System. Designed and built SDK listening pipeline.</p>
+                                <p>Designed and implemented robotic bi-axial Emotion System and corresponding
+									impacts on robot behavior. Single-handedly architected and maintained robot listening pipeline (main
+									interface forinteraction).</p>
                             </div>
                             <div class="clearfix"> </div>
                         </div>
@@ -213,18 +263,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="experience-right">
 								<h4>Robot SDK Developer</h4>
-								<p>In first 25 employees of Jibo, Inc. Implemented and Architected major backend system to allow Jibo Skills to run within electron contexts on platform. Regularly work across teams for new initiatives. Won first company Culture Award.</p>
+								<p> Employee 20(/110) Designed a series of tutorials from ”Getting Started” to
+									advanced usage still used to onboard internal and external developers.
+									• Architected data APIs for dev tools to manage robot sensory input from
+									cameras and microphones.
+									• Implemented frontend UI and developerinterfaces to build high-level skills.
+									• Won first company culture award for”outstanding cultural contributions.”</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
 						<div class="experience-grids experience-grids-btm">
 							<div class="experience-left">
-								<h3>2013 - 2014</h3>
+								<h3>Summer 2014</h3>
 								<h5>Spotify </h5>
 							</div>
 							<div class="experience-right">
 								<h4>Software Development Intern</h4>
-								<p>Developed web tools to test new song recommendation algorithms and worked on team to develop new song similarity machine learning algorithms.</p>
+								<p>Full stack development of internal desktop application.
+									• Developed web APIs and GUI for music annotation tools.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -256,7 +312,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="experience">  
 						<div class="experience-grids">
 							<div class="experience-left">
-								<h3>2015<span>Bachelor of Science</span> </h3>
+								<h3>May 2015<br><span>Bachelor of Science</span> </h3>
 								<h5>Tufts University</h5>
 								<h6>Student</h6>
 								<h6>Teaching Assistant</h6>
@@ -271,12 +327,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div> 
 						<div class="experience-grids experience-grids-btm">
 							<div class="experience-left">
-								<h3>2013<span>Abroad</span></h3>
+								<h3>2013<br><span>Abroad</span></h3>
 								<h5>University of Canterbury</h5>
 								<h6>Christchurch, New Zealand</h6>
 							</div>
 							<div class="experience-right">
-								<h4>One Year Abroad</h4>
+								<h4>Computer Science</h4>
 								<p>In addition to a full course load abroad, I was an instructor for the Girls Computer Club for secondary school students, and achieved the highest marks in my class.</p>
 							</div>
 							<div class="clearfix"> </div>
@@ -375,14 +431,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content"> 
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Talk To Me</h4>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="contact"> 
 						<div class="contact-w3lsrow">
-							<!--<div class="col-md-6 contact-left w3-agileits">-->
-								<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9503398796587!2d-73.9940307!3d40.719109700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a27e2f24131%3A0x64ffc98d24069f02!2sCANADA!5e0!3m2!1sen!2sin!4v1441710758555" allowfullscreen></iframe>-->
-							<!--</div>-->
 							<div class="col-md-6 contact-right">
 								<form action="#" method="post">
 									<div class="styled-input agile-styled-input-top">
@@ -516,7 +568,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li>clockwise rotation</li>
 							<li>counterclockwise rotation</li>
 							<li>every other LED flashes</li>
-							<li>every LED flashes</li>  
+							<li>every LED flashes</li>
 							</ul>
 							<h5>Color</h5>
 							Colors per genome are described using one RGB value and a function vs. time
