much content update waow

--- a/index.html
+++ b/index.html
@@ -60,12 +60,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="banner-text agileinfo-text">  
 				<h1>Carolyn Saund</h1>
+			</div>
+			<div class="banner-text agileinfo-text">
+				<div class="col-md-4 about-left ">
+					<img src="images/hackathon.jpg" class="img-responsive" alt=""/>
+				</div>
 				<h6>Software Engineer</h6>
 				<h6>Emotional Programmer</h6>
 				<h6>Guacamole Enthusiast</h6>
+				<a href="https://www.facebook.com/carolyn.saund">
+					<img a href="#" src="images/facebook.jpg" class="img-responsive zoom-img icon-link" alt=""/>
+				</a>
+				<a href="https://medium.com/@caro.lyn">
+					<img a href="#" src="images/medium.jpg" class="img-responsive zoom-img icon-link" alt=""/>
+				</a>
+				<a href="https://www.linkedin.com/in/carolyn-saund-89b90b63/">
+					<img a href="#" src="images/linkedin.jpg" class="img-responsive zoom-img icon-link" alt=""/>
+				</a>
+				<a href="https://twitter.com/CarolynBot">
+					<img a href="#" src="images/twitter.jpg" class="img-responsive zoom-img icon-link" alt=""/>
+				</a>
+				<a href="https://www.goodreads.com/user/show/27084999-carolyn-saund">
+					<img a href="#" src="images/goodreads.jpg" class="img-responsive zoom-img icon-link" alt=""/>
+				</a>
 			</div>
-		</div>	
-	</div>	
+		</div>
+	</div>
 	<script src="js/jquery.vide.min.js"></script>
 	<!-- //banner --> 
 	<!-- modal-about -->
@@ -78,7 +98,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="modal-body modal-spa">
 					<div class="about"> 
 						<div class="col-md-4 about-left ">
-							<img src="images/japan_bamboo.jpg" class="img-responsive" alt=""/>
+							<img src="images/camping.jpg" class="img-responsive" alt=""/>
 						</div>
 						<div class="col-md-8 about-right wthree">
 							<h3>Hello, I'm <span>Carolyn M. Saund</span></h3>
@@ -107,9 +127,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"> </div> 
 						<div class="about-text agileits-w3layouts">
 							<p> I recieved my B.S. in Computer Science and Cognitive
-							and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br></p>
-							<p class="agile-br">I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br></p>
-							<p class="agile-br">I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out how I <b>play</b> up above.</p>
+							and Brain Sciences from Tufts University in May 2015, where my focus was in  <b>Machine Learning</b> and
+								<b>Artificial Intelligence</b>. I intend to pursue these in graduate studies in Fall 2018.
+								<br></p>
+							<p class="agile-br">I am motivated by <b>passion</b>. Whatever the task, being surrounded by
+								passionate people brings out my most inspired and creative work. I love working in teams
+								small enough to personally interact with each member every day, and take as easily to
+								leading a project I care about as I do to following a team lead's vision.<br></p>
+							<p class="agile-br"><b>Empathy</b> is the ideal I cling to most strongly. Empathy increases
+								humans ability to connect with one another, and build a stronger global community -
+								together.<br></p>
+							<p class="agile-br">I am a shameless and reckless world <b>traveller</b>, and jump at the
+								chance to adventure. I've visited over 20 countries by myself, and fully intent to
+								continue seeing as much of the world as I can in this life. Travel increases my global
+								perspective, and exposes me to new ways of solving problems through a wider lens.
+								Travel is my most valuable empathetic tool.</p>
 						</div>
 					</div>
 				</div> 
@@ -193,7 +225,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li>Lesbians Who Tech, presentation on emotional future ofrobotics</li>
 								<li>Boston ML Meetup, presenter on Innovations in Human-ComputerInterfaces</li>
 								<li>MLHack Championships, (technical presentation & hackathon judge)</li>
-								<li>Tufts WICS Conference, Alumni Panne</li>
+								<li>Tufts WICS Conference, Alumni Panel</li>
 							</ul>
 							<br>
 						</div>
