take out fake projects, add art modal

--- a/index.html
+++ b/index.html
@@ -408,38 +408,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
-										<img src="images/g4.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>The Neuron</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
-										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>The Cube</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
-										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>Everywear</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="slideshows/thainam.html" data-lightbox="example-set" data-title="I like backpacking.">
-										<img src="slideshows/img/vietnam/halongsunsetsmall.jpg" class="img-responsive zoom-img" alt=""/>
+									<a href="#" data-toggle="modal" data-target="#miscart" class="w3ls-hover" data-title="Drosophila">
+										<img a href="#" src="images/halfdome.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>Misc Art</h5>
 										</div>
@@ -632,6 +602,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!-- //modal-droso -->
+
+	<!-- modal-emotion -->
+	<div class="modal fade modal-about" id="miscart" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				</div>
+				<div class="modal-body modal-spa">
+					<div class="project">
+						<div class="project-img ">
+							<img src="images/watercolor.jpg" class="img-responsive" alt=""/>
+						</div>
+						<div class="col-md-8 project-right wthree project-heading">
+							<h3>Misc Art</span></h3>
+						</div>
+						<div class="clearfix"> </div>
+						<div class="project-text agileits-w3layouts">
+							<p>
+							<h5>Coming Soon</h5>
+							paintings, photographs, digital artwork I like to make.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //modal-emotion -->
 
 	
 	<!-- Bootstrap core JavaScript
