--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<br>
 						</div>
 						<br>
+						<iframe width="560" height="315" class="about-vid" src="https://www.youtube.com/embed/XuH_iaANSq0?start=334" frameborder="0" allowfullscreen></iframe>
 						<div class="col-md-12 bar-grids  w3-agile skills">
 							<h4><span class="glyphicon glyphicon-thumbs-up"></span>Testimonies</h4>
                             <p>"Nobody else I would rather work with on your team. Or any team, ever." <br><b>Michael James, Friend and Student Peer</b></p>
